# FindCluster

./: .gitignore  3dclusters.cpp  3dclusters.h  3dclusters_init.hpp  3dclusters_keys.hpp  CMakeLists.txt  INSTALL  README  TODO  compile.sh  compile_3dclusters.sh  compile_frodo.sh  compile_histo.sh  find2dperimenter.cpp  findcluster.cpp  findcluster.h  findcluster_box.cpp  findcluster_box.h  findcluster_cluster.cpp  findcluster_cluster.h  findcluster_cluster.hpp  findcluster_helper.cpp  findcluster_helper.hpp  findcluster_init.hpp  findcluster_obs.cpp  findcluster_obs.hpp  findcluster_path.cpp  findcluster_path.h  findcluster_path.hpp  findcluster_radius.cpp  findcluster_radius.h  findcluster_radius.hpp  findcluster_write.cpp  findcluster_write.h  findcluster_write.hpp  findcluster_writemeasure.cpp  findcluster_writemeasure.h  gen3dpolllattice.cpp  genfres.sh  genpollev_from_config.cpp  (+11 more)
3d_new/: 3dcluster.list  3dcluster_40.list  3dcluster_40x10_m0.data  3dcluster_40x11_m0.data  3dcluster_40x12_m0.data  3dcluster_40x14_m0.data  3dcluster_40x16_m0.data  3dcluster_40x18_m0.data  3dcluster_40x20_m0.data  3dcluster_40x2_m0.data  3dcluster_40x3_m0.data  3dcluster_40x4_m0.data  3dcluster_40x5_m0.data  3dcluster_40x6_m0.data  3dcluster_40x7_m0.data  3dcluster_40x8_m0.data  3dcluster_40x9_m0.data  3dclusters.x  findcluster.x  genvid.sh  record.sh
3dtests/: 3dcluster.list  3dcluster_40.list  3dcluster_40x2_m0.data  3dcluster_40x9_m0.data  3dcluster_8x4_m1.data
analyze_templates/: analyze_template_20130722.tgz
analyze_templates/fraction_cluster_plots/: copydata.sh  genres.sh  plot_boxes.gpl  plot_clusterweight.gpl  plot_cutrate.gpl
analyze_templates/fraction_cluster_template/: genp.sh  genres.sh  plot_boxes_fit.gpl  plot_clusterweight2.gpl  plot_cutrate2.gpl  plot_fractdim.gpl  plot_fractdim2.gpl  plot_percc.gpl  plot_percc2.gpl  startall.sh
include/: CArray.hpp  ConfigData.hpp  findcluster.h  findcluster_box.h  findcluster_helper.h  findcluster_init.hpp  findcluster_obs.h  findcluster_path.h  findcluster_radius.h  findcluster_write.h  findcluster_writemeasure.h  generic.hpp  helper.hpp  jackknife.h  lpollhandler.hpp  matrixfunctions.hpp  optimatrixhandling.hpp  readowndata.hpp  readwupperdata.hpp  version.h
old/: pollhisto.cpp
src/: CMakeLists.txt  findcluster.cpp  findcluster_box.cpp  findcluster_cluster.cpp  findcluster_helper.cpp  findcluster_obs.cpp  findcluster_radius.cpp  findcluster_write.cpp
testfiles/: cluster.list  clusters.data  comp.sh  findcluster.x  puregauge.list  qcd.list  run.sh  start.sh
(+91 files in other folders)
