cmake_minimum_required (VERSION 2.8)
project (FINDCLUSTER)


set(CMAKE_BUILD_TYPE Release)
SET(CXX_ADDITIONAL_COMPILE_FLAGS  "-O3 -march=native -Wall -pipe -fno-strict-aliasing -DNDEBUG")
SET(CXX_ADDITIONAL_LINK_FLAGS     "")
SET(CXX_ADDITIONAL_LIBRARIES      "")

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CXX_ADDITIONAL_COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${CXX_ADDITIONAL_LINK_FLAGS}" )

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${FINDCLUSTER_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${FINCLUSTER_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${FINDCLUSTER_BINARY_DIR}/bin)

add_subdirectory(src)

